fixing layout issues

--- a/src/Container/ProductListPage.css
+++ b/src/Container/ProductListPage.css
@@ -5,11 +5,24 @@
 
 .cardGrid .fliterSection {
   display: flex;
-  justify-content: space-between;
   text-align: center;
   margin-top: 10px;
   margin-bottom: 15px;
   padding: 5px;
+}
+
+@media screen and (min-width: 600px) {
+  .cardGrid .fliterSection {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .cardGrid .fliterSection {
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }
 
 .cardGrid .fliterSection .innerFilter {
